tests/baselines/reference/parserExportAssignment2.errors.txt
parserExportAssignment2.ts(1,10): error TS2304: Cannot find name 'foo'.


==== parserExportAssignment2.ts (1 errors) ====
    export = foo;
             ~~~
!!! error TS2304: Cannot find name 'foo'.